-- Table CHAMBRE 
SELECT * FROM DBC.TablesV WHERE TableName = 'CHAMBRE' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_CHAMBRE;

CREATE TABLE STG.CHAMBRE (
    NO_CHAMBRE INTEGER NOT NULL,
    NOM_CHAMBRE VARCHAR(20) NOT NULL,
    NO_ETAGE BYTEINT,
    NOM_BAT VARCHAR(20),
    TYPE_CHAMBRE VARCHAR(10),
    PRIX_JOUR SMALLINT NOT NULL,
    DT_CREATION DATE NOT NULL)
    UNIQUE PRIMARY INDEX (NO_CHAMBRE);

.LABEL OK_CHAMBRE

-- Table TRAITEMENT
SELECT * FROM DBC.TablesV WHERE TableName = 'TRAITEMENT' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_TRAITEMENT;

CREATE TABLE STG.TRAITEMENT (
    ID_TRAITEMENT BIGINT NOT NULL,
    CD_MEDICAMENT VARCHAR(10) NOT NULL,
    CATG_MEDICAMENT VARCHAR(100) NOT NULL,
    MARQUE_FABRI VARCHAR(100) NOT NULL,
    QTE_MEDICAMENT SMALLINT,
    DSC_POSOLOGIE VARCHAR(100) NOT NULL,
    ID_CONSULT BIGINT NOT NULL,
    TS_CREATION_TRAITEMENT TIMESTAMP(0) NOT NULL)
    UNIQUE PRIMARY INDEX (ID_TRAITEMENT);

.LABEL OK_TRAITEMENT

-- Table PERSONNEL
SELECT * FROM DBC.TablesV WHERE TableName = 'PERSONNEL' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_PERSONNEL;

CREATE TABLE STG.PERSONNEL (
    ID_PERSONNEL INTEGER NOT NULL,
    NOM_PERSONNEL VARCHAR(100) NOT NULL,
    PRENOM_PERSONNEL VARCHAR(100) NOT NULL,
    FONCTION_PERSONNEL VARCHAR(50) NOT NULL,
    TS_DEBUT_ACTIVITE TIMESTAMP(0) NOT NULL,
    TS_FIN_ACTIVITE TIMESTAMP(0),
    RAISON_FIN_ACTIVITE VARCHAR(100),
    TS_CREATION_PERSONNEL TIMESTAMP(0) NOT NULL,
    TS_MAJ_PERSONNEL TIMESTAMP(0),
    CD_STATUT_PERSONNEL VARCHAR(10) NOT NULL)
    UNIQUE PRIMARY INDEX (ID_PERSONNEL);

.LABEL OK_PERSONNEL

-- Table PATIENT
SELECT * FROM DBC.TablesV WHERE TableName = 'PATIENT' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_PATIENT;

CREATE TABLE STG.PATIENT (
    ID_PATIENT INTEGER NOT NULL,
    NOM_PATIENT VARCHAR(100) NOT NULL,
    PRENOM_PATIENT VARCHAR(100) NOT NULL,
    DT_NAISS DATE,
    VILLE_NAISS VARCHAR(100),
    PAYS_NAISS VARCHAR(100),
    NUM_SECU VARCHAR(15),
    IND_PAYS_NUM_TELP VARCHAR(5),
    NUM_TELEPHONE VARCHAR(20),
    NUM_VOIE VARCHAR(10),
    DSC_VOIE VARCHAR(250),
    CMPL_VOIE VARCHAR(250),
    CD_POSTAL VARCHAR(10),
    VILLE VARCHAR(100),
    PAYS VARCHAR(100),
    TS_CREATION_PATIENT TIMESTAMP(0) NOT NULL,
    TS_MAJ_PATIENT TIMESTAMP(0) NOT NULL)
    UNIQUE PRIMARY INDEX (ID_PATIENT);

.LABEL OK_PATIENT

-- Table CONSULTATION
SELECT * FROM DBC.TablesV WHERE TableName = 'CONSULTATION' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_ CONSULTATION;

CREATE TABLE STG.CONSULTATION (
    ID_CONSULT BIGINT NOT NULL,
    ID_PERSONNEL INTEGER NOT NULL,
    ID_PATIENT INTEGER NOT NULL,
    TS_DEBUT_CONSULT TIMESTAMP(0) NOT NULL,
    TS_FIN_CONSULT TIMESTAMP(0) NOT NULL,
    POIDS_PATIENT DECIMAL(10, 2) NOT NULL,
    TEMP_PATIENT DECIMAL(10, 2),
    UNIT_TEMP VARCHAR(15),
    TENSION_PATIENT DECIMAL(10, 2),
    DSC_PATHO VARCHAR(250),
    INDIC_DIABETE VARCHAR(10),
    ID_TRAITEMENT BIGINT NOT NULL,
    INDIC_HOSPI VARCHAR(10))
    UNIQUE PRIMARY INDEX (ID_CONSULT);

.LABEL OK_ CONSULTATION

-- Table HOSPITALISATION
SELECT * FROM DBC.TablesV WHERE TableName = 'HOSPITALISATION' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_HOSPITALISATION;

CREATE TABLE STG.HOSPITALISATION (
    ID_HOSPI BIGINT NOT NULL,
    ID_CONSULT BIGINT NOT NULL,
    NO_CHAMBRE INTEGER NOT NULL,
    TS_DEBUT_HOSPI TIMESTAMP(0) NOT NULL,
    TS_FIN_HOSPI TIMESTAMP(0),
    COUT_HOSPI DECIMAL(10, 2) NOT NULL,
    ID_PERSONNEL_RESP INTEGER NOT NULL)
    UNIQUE PRIMARY INDEX (ID_HOSPI);

.LABEL OK_HOSPITALISATION


-- Table MEDICAMENT
SELECT * FROM DBC.TablesV WHERE TableName = 'MEDICAMENT' AND DatabaseName = 'STG';
.IF ACTIVITYCOUNT <> 0 THEN .GOTO OK_MEDICAMENT;

CREATE TABLE STG.MEDICAMENT (
    CD_MEDICAMENT VARCHAR(10) NOT NULL,
    NOM_MEDICAMENT VARCHAR(250),
    CONDIT_MEDICAMENT VARCHAR(100),
    CATG_MEDICAMENT VARCHAR(100) NOT NULL,
    MARQUE_FABRI VARCHAR(100) NOT NULL)
    UNIQUE PRIMARY INDEX (CD_MEDICAMENT);

.LABEL OK_MEDICAMENT